k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mkjs-backend

  template:
    metadata:
      labels:
        app: mkjs-backend

    spec:
      containers:
      - name: backend
        image: node:24-alpine

        ports:
        - containerPort: 55555
