k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkjs-backend-service

spec:
  selector:
    app: mkjs-backend

  ports:
  - port: 55555
    targetPort: 55555

  type: ClusterIP
