k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkjs-frontend-service

spec:
  selector:
    app: mkjs-frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
