k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mkjs-ingress

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
    - hosts:
        - mkjs.local
      secretName: mkjs-tls

  rules:
    - host: mkjs.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: mkjs-frontend-service

                port:
                  number: 80
